# mapu

./: .gitignore  LICENSE  README.md  conda_.gitattributes  conda_environment.yml  conda_pyproject.toml  conda_setup.py  environment.yml  pyproject.toml
docs/: build.sh  hooks.py  mkdocs.yml
docs/api/: conf.py  data.rst  index.rst  mapu.rst  mspu.rst  pandas.rst  polars.rst
docs/api/_static/: custom.css
docs/api/_templates/: copyright.html
docs/guide/: index.md  tutorial.md
docs/src/: index.md
mapu/: __init__.py  conda__version.py
mapu/data/: __init__.py  rand_df.py
mapu/pandas/: __init__.py  datetime.py  parquet.py  util.py  utils.py
mapu/pandas_utils/: datetime.py  parquet.py
mapu/polars/: __init__.py  util.py  utils.py
mapu/security/: crypt.py
mspu/: __init__.py  conda__version.py
mspu/data/: rand_df.py
mspu/pandas/: __init__.py  datetime.py  utils.py
mspu/polars/: utils.py
recipe/: meta.yaml
tests/pandas/: test_datetime.py  test_parquet.py  test_util.py  test_utils.py
