[build-system]
requires = ["setuptools>=61.0", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = 'mapu'
dynamic = ["version"]
description = "My python utils package."
authors = [
    {name = "Sean Ma", email = "sean.sl.ma@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.setuptools]
packages = ["mapu"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "mapu/_version.py"
versionfile_build = "mapu/_version.py"
tag_prefix = ""
parentdir_prefix = "mapu-"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
preview = false
skip-string-normalization = true #disable string double quotes normalization
