[build-system]
requires = ["setuptools>=61", "wheel", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = 'mapu'
dynamic = ["version"]
description = "Ma's python utils package."
authors = [
    {name = "Sean Ma", email = "sean.sl.ma@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

[tool.setuptools]
packages = ["mapu"]

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "mapu/_version.py"
versionfile_build = "mapu/_version.py"
tag_prefix = ""
parentdir_prefix = "mapu-"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
preview = false
quote-style = "single"
