[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mspu"
dynamic = ["version"]
description = "Ma's python utils package."
authors = [
    {name = "Sean Ma", email = "sean.sl.ma@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "numpy",
    "pandas",
    "polars",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
exclude = [
    "conda_*",
    "**/conda_*",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.format]
preview = false
quote-style = "single"
